Scroll issue on iphone

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1232,6 +1232,7 @@ input[type="submit"] {
   height: 100vh;
   width: 100vw;
   overflow-y: visible;
+  -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
   background-color: #f6f6f6;
 
